[package]
name = "chowdown"
version = "0.1.0"
authors = ["Christoph Otter <chipshort@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"